Project merged. Pre-release version. Фиксим пару багов и деплоим

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- оставим в качестве примера подключение онлайн шрифтов-->
 <!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
 <!--    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">-->
-    <link rel="stylesheet" href="dist/css/main.css"/>
+<!--    <link rel="stylesheet" href="./dist/main.css"/>-->
     <link rel="stylesheet" href="./dist/styles.min.css">
     <title>forkio</title>
 </head>
@@ -18,14 +18,14 @@
     <header class="main-header">
         <!-- Меню для Смартфонов -->
         <nav class="main-header__nav-mobile">
-            <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"></a>
+            <a href="#"><img class="main-nav__logo" src="dist/img/main-nav__logo.png" alt="logo"></a>
             <button class="main-nav__btn btn">Buy Now</button>
-            <img class="main-nav__burger-menu-tab" src="src/img/burger-menu-start-tab.png" alt="menu-image">
+            <img class="main-nav__burger-menu-tab" src="dist/img/burger-menu-start-tab.png" alt="menu-image">
         </nav>
         <!-- Меню для Планшетов -->
         <div class="main-header__nav-tablet">
             <nav class="main-header__nav-tablet-first">
-                <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
+                <a href="#"><img class="main-nav__logo" src="dist/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
                 <button class="main-nav__btn btn">Buy Now</button>
             </nav>
             <menu class="main-header__nav-tablet-second">
@@ -37,7 +37,7 @@
         </div>
         <!-- Меню для десктопов -->
         <nav class="main-header__nav-LG">
-            <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
+            <a href="#"><img class="main-nav__logo" src="dist/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
             <menu class="main-header__menu-LG">
                 <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">Overview</a></li>
                 <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">About Fork</a></li>
@@ -49,7 +49,7 @@
         </nav>
     </header>
 
-</div>
+
 <!---------------------- вторая часть (из 3х ) Рябушкина: секция Fork App (хедер) ------------------------------------->
 <!---Fork App Section--->
 <section class="front-header  front-header--mobile-mode  text-sections-styling">
@@ -103,7 +103,7 @@
     </div>
     <div class="what-you-get__card">
         <div class="what-you-get__card__icon">
-            <img src="./dist/img/icon2.png" alt="icon of a provided service"width="90px" height="80px">
+            <img src="./dist/img/icon2.png" alt="icon of a provided service" width="90px" height="80px">
         </div>
         <div class="card__flex-item">
             <h4 class="what-you-get__subheading">Incredibly Powerful Tool</h4>
@@ -112,7 +112,7 @@
     </div>
     <div class="what-you-get__card">
         <div class="what-you-get__card__icon">
-            <img src="./dist/img/icon3.png" alt="icon of a provided service"width="60px" height="84px">
+            <img src="./dist/img/icon3.png" alt="icon of a provided service" width="60px" height="84px">
         </div>
         <div class="card__flex-item">
             <h4 class="what-you-get__subheading">Experimental Stuff</h4>
@@ -121,7 +121,7 @@
     </div>
     <div class="what-you-get__card">
         <div class="what-you-get__card__icon">
-            <img src="./dist/img/icon4.png" alt="icon of a provided service"width="71px" height="71px">
+            <img src="./dist/img/icon4.png" alt="icon of a provided service" width="71px" height="71px">
         </div>
         <div class="card__flex-item">
             <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
@@ -135,32 +135,32 @@
             <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
             <div class="user-reviews__container">
                 <div class="user-reviews__card">
-                    <img src="./src/img/8.png" alt="partner logo" class="user-reviews__img">
+                    <img src="./dist/img/8.png" alt="partner logo" class="user-reviews__img">
                     <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet.
                         Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
                 </div>
                 <div class="user-reviews__card">
-                    <img src="./src/img/9.png" alt="partner logo" class="user-reviews__img">
+                    <img src="./dist/img/9.png" alt="partner logo" class="user-reviews__img">
                     <p class="user-reviews__text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum,
                         rhoncus molestie neque ac, mollis eleifend nibh.</p>
                 </div>
                 <div class="user-reviews__card">
-                    <img src="./src/img/10.png" alt="partner logo" class="user-reviews__img">
+                    <img src="./dist/img/10.png" alt="partner logo" class="user-reviews__img">
                     <p class="user-reviews__text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat
                         fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. </p>
                 </div>
                 <div class="user-reviews__card">
-                    <img src="./src/img/11.png" alt="partner logo" class="user-reviews__img">
+                    <img src="./dist/img/11.png" alt="partner logo" class="user-reviews__img">
                     <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet.
                         Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
                 </div>
                 <div class="user-reviews__card">
-                    <img src="./src/img/12.png" alt="partner logo" class="user-reviews__img">
+                    <img src="./dist/img/12.png" alt="partner logo" class="user-reviews__img">
                     <p class="user-reviews__text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa.
                         Nulla faucibus lorem id arcu consequat faucibus. </p>
                 </div>
                 <div class="user-reviews__card">
-                    <img src="./src/img/13.png" alt="partner logo" class="user-reviews__img">
+                    <img src="./dist/img/13.png" alt="partner logo" class="user-reviews__img">
                     <p class="user-reviews__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis.
                         Pellentesque porttitor cursus massa et vestibulum.</p>
                 </div>
@@ -206,6 +206,7 @@
         </div>
     </div>
 </section>
+</div>
 </body>
-<script src="dist/js/script.js"></script>
+<script src="./dist/scripts.min.js"></script>
 </html>
